--- a/Frontend/src/app/post/post.component.html
+++ b/Frontend/src/app/post/post.component.html
@@ -42,8 +42,8 @@
         </select>
       </div>
       <div class="button-group end">
-        <button type="button" class="btn primary" (click)="addObjektToHaveArray()">Have 가져오기</button>
-        <button type="button" class="btn primary" (click)="addObjektToWantArray()">Want 가져오기</button>
+        <button type="button" class="btn primary" (click)="addObjektToHaveArray()">Add to Have</button>
+        <button type="button" class="btn primary" (click)="addObjektToWantArray()">Add to Want</button>
         <button type="button" class="btn warning" (click)="resetObjektArray()">Reset</button>
       </div>
     </form>
